--- a/wise-dogs-app/package.json
+++ b/wise-dogs-app/package.json
@@ -2,6 +2,7 @@
   "name": "wise-dogs-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://herrhonig.github.io/wise-dog-app/",
   "dependencies": {
     "@emotion/styled": "^11.8.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
