--- a/wise-dogs-app/package.json
+++ b/wise-dogs-app/package.json
@@ -25,6 +25,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
